--- a/JOBNOM/src/main/webapp/resources/css/Hire/HireMyHire.css
+++ b/JOBNOM/src/main/webapp/resources/css/Hire/HireMyHire.css
@@ -1,4 +1,10 @@
 
+@font-face {
+    font-family: 'paybooc-Bold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/paybooc-Bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
    a:hover{
 
     color: green;
@@ -176,7 +182,7 @@
 .myHyreSupportView{
     margin-left: 30px;
     width: 80%;
-    height: 900px;
+    height: 800px;
     font-size: 30px;
     font: bold;
     padding: 10px;
@@ -215,7 +221,8 @@
 }
 
 .myHyreSupportListAll{
-    height: 80px;
+	padding-left:40px;
+    height: 40px;
     font-size: 16px;
     display: flex;
     border-bottom: solid rgb(176, 174, 174);
