--- a/JOBNOM/src/main/webapp/resources/css/Hire/announcementPage.css
+++ b/JOBNOM/src/main/webapp/resources/css/Hire/announcementPage.css
@@ -1,4 +1,10 @@
  
+@font-face {
+    font-family: 'paybooc-Bold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/paybooc-Bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
    a:hover{
 
     color: green;
@@ -645,6 +651,24 @@ border-radius: 5px;
     top: 0;
     background: #00c362;
     color: #fff;
+    text-align: center;
+    width: 250px;
+    height: 50px;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 5px;
+    margin-right: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 60px;
+
+}
+#fn_mypage{
+
+    border-radius: 12px;
+    right: 0;
+    top: 0;
+    color: black;
     text-align: center;
     width: 250px;
     height: 50px;
