--- a/JOBNOM/src/main/webapp/resources/css/Hire/insertReview.css
+++ b/JOBNOM/src/main/webapp/resources/css/Hire/insertReview.css
@@ -1,4 +1,10 @@
 
+@font-face {
+    font-family: 'paybooc-Bold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/paybooc-Bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 .activity{
     padding-top: 30px;
@@ -144,6 +150,7 @@ padding-left:130px ;
     top: 0;
     width: 100%;
     height: 100%;
+    padding-top:60px;
 
     z-index:99;
    
@@ -160,7 +167,7 @@ padding-left:130px ;
 #popmenu {
 
     width: 40%;
-    height: 710px;
+    height: 700px;
     background: #fff;
     margin-left: 310px;
     margin-top: 30px;
@@ -196,7 +203,7 @@ padding-left:130px ;
     font-weight: bold;
     border-radius: 5px;
     margin-right: 10px;
-    margin-top: 40px;
+    margin-top: 20px;
     margin-left: 10px;
    
 
@@ -360,7 +367,7 @@ padding-left:130px ;
     font-weight: bold;
     border-radius: 5px;
     margin-right: 10px;
-    margin-top: 40px;
+    margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 60px;
 
