--- a/JOBNOM/src/main/webapp/resources/css/Hire/supportingCompany.css
+++ b/JOBNOM/src/main/webapp/resources/css/Hire/supportingCompany.css
@@ -1,5 +1,11 @@
 /* ////////////////////////////////////////////////////// */
 
+@font-face {
+    font-family: 'paybooc-Bold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/paybooc-Bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 .activity{
     padding-top: 30px;
     width: 100%;
