--- a/JOBNOM/src/main/webapp/resources/css/Hire/HireHome.css
+++ b/JOBNOM/src/main/webapp/resources/css/Hire/HireHome.css
@@ -198,7 +198,7 @@ a{
 .announcementList1{
     width:100%;
 	text-align: center;
-	padding-left: 300px;
+	padding-left: 100px;
 }
 .announcementListSize{
 
@@ -225,14 +225,15 @@ a{
 
 /* 추천공고 리스트 설정 */
 .announcementListFlax{
-	width:760px;
+	width:100%;
 	height:50px;
-    padding-left: 10px;
+  
     padding-top: 20px;
     display: flex;
     font-size: 20px;
     margin-top:5px;
     text-align: center;
+
 
 }
 .Mylogo{
